# jsource

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  J_EXAMPLES.md  LICENSE.md  LIVESTREAM_LESSONS.md  README.md  excluded_names.txt  find_replace_macro.py  known_good_build.txt  known_good_cmake.txt  known_good_test.txt  removal_log.md
.circleci/: config.yml
.github/: CODEOWNERS  auto_assign.yml
.github/workflows/: action.yml
base64/: CMakeLists.txt
base64/include/: libbase64.h
base64/lib/: codec.c  codec.h  codec_choose.c  codecs.h  env.h  lib.c
base64/lib/arch/generic/: codec-generic.c  dec_tail.c  enc_tail.c
base64/lib/tables/: tables.c  tables.h
cmake/: FindOpenMP.cmake  FindSphinx.cmake  OptimizeForArchitecture.cmake
docs/: .gitignore  CMakeLists.txt  Doxyfile.in  J_EXAMPLES.md  LIVESTREAM_LESSONS.md  REFACTORINGS.md  conf.py  index.rst
docs/scripts/: preprocessor.py
docs/source/: adverbs.rst  conf.py  conjunctions.rst  dyadic.rst  index.rst  monadic.rst  verbs-old.rst  verbs.md  verbs.rst
hostdefs/: hostdefs.c
jlibrary/system/main/: stdlib.ijs
jlibrary/system/util/: boot.ijs  p.ijs
jsrc/: CMakeLists.txt  a.c  ab.c  aes-arm.c  aes-ni.c  ai.c  algorithm.hpp  am.c  andjnative.c  ao.c  ar.c  ar.h  array.hpp  avx2intrin-emu.h  avxintrin-emu.h  blis.h  ca.c  cc.c  cf.c  cg.c  cip.c  cipfloatmm_t.h  conversions.cpp  cp.c  cpuinfo.c  cpuinfo.h  cr.c  cu.c  cx.c  d.c  dc.c  dss.c  dstop.c  dsusp.c  dtoa.c  dtoa.h  f.c  f2.c  fbu.c  fnmatch.c  (+109 more)
jsrc/adverbs/: CMakeLists.txt  a.c  a.h  ab.c  af.c  ai.c  am.c  am1.c  amn.c  ao.c  ap.c  ar.c  ar.h  as.c  au.c
jsrc/conjunctions/: CMakeLists.txt  c.c  ca.c  cc.c  cf.c  cg.c  ch.c  cip.c  cip_t.h  cl.c  cp.c  cpdtsp.c  cr.c  crs.c  cu.c  cv.c  cx.c
jsrc/debugging/: d.c  d.h  dc.c  dss.c  dstop.c  dsusp.c
jsrc/format/: f.c  f2.c  fbu.c
jsrc/j_parent/: CMakeLists.txt  j.c  jt.h  m.h  vx.h
jsrc/openssl/sha/: openssl-util.c  sha.h
jsrc/parsing/: p.c  p.h  pv.c
jsrc/representations/: r.c  rl.c  rt.c
jsrc/util/: string.cpp  string.hpp  stringx.cpp  stringx.h
jsrc/verbs/: CMakeLists.txt  crc32c.c  crc32c.h  v.c  v0.c  v1.c  v2.c  va.h  va1.c  va1ss.c  va2.c  va2s.c  va2ss.c  vamultsp.c  vasm.h  vb.c  vbang.c  vcant.c  vcat.c  vcatsp.c  vchar.c  vcomp.c  vcomp.h  vcompsc.c  vd.c  ve.c  ve.h  vf.c  vfft.c  vfrom.c  vfromsp.c  vg.c  vg.h  vgauss.c  vgcomp.c  vgmerge.h  vgmergemincomp.h  vgranking.c  vgsort.c  vgsort.h  (+16 more)
jsrc/verbs/dyadic/: take_drop.cpp
jsrc/verbs/monadic/: isempty.cpp  rank.cpp  same.cpp  shape.cpp  tally.cpp
jsrc/words/: w.c  w.h  wc.c  wn.c  ws.c
jsrc/xenos/: x.c  x.h  x15.c  xa.c  xb.c  xc.c  xc.h  xcrc.c  xd.c  xf.c  xfmt.c  xh.c  xi.c  xl.c  xo.c  xs.c  xt.c  xu.c
learning/: J_EXAMPLES.md  LIVESTREAM_LESSONS.md  REFACTORINGS.md
netdefs/: netdefs.c
script/: build_test.ijs
sleef/src/arch/: avxintrin-emu.h
test/: CMakeLists.txt  g100.ijs  g100i.ijs  g121.ijs  g122a.ijs  g128x5.ijs  g18x.ijs  g200.ijs  g200m.ijs  g202b.ijs  g210.ijs  g211.ijs  g212.ijs  g221.ijs  g222.ijs  g300.ijs  g320ip.ijs  g320ipt.ijs  g3x.ijs  g400.ijs  g401.ijs  g402.ijs  g410.ijs  g411.ijs  g420.ijs  g420fg.ijs  g421.ijs  g421d.ijs  g421e.ijs  g422.ijs  g422rk.ijs  g432.ijs  g520.ijs  g520b.ijs  g521.ijs  g530.ijs  g531.ijs  g5x30.ijs  g600.ijs  g601.ijs  (+52 more)
util/: stringx.cpp  stringx.h
